# music-stream-app

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.vps.yml  docker-compose.yml
.github/workflows/: backend-ci.yml  ci.yml  deploy.yml  docs-ci.yml  frontend-ci.yml
backend/: .dockerignore  .env.docker.example  Dockerfile  README.md  conftest.py  pyproject.toml  ruff.toml
backend/api/: schema.yml
backend/config/: celery.py  logging.py  middleware.py  urls.py
backend/config/settings/: base.py  ci.py  dev.py  prod.py  production.py
backend/music/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  throttles.py  urls.py  views.py  views_health.py
backend/music/migrations/: 0001_initial.py  0002_song_is_public_song_owner.py  0003_alter_song_audio_file.py  0004_profile.py  0005_backfill_profiles.py  0006_profile_avatar.py  0007_song_duration_song_status.py  0008_remove_song_duration_alter_song_duration_seconds.py  0009_song_song_public_recent_idx_and_more.py
backend/music/tests/: test_api_contract.py  test_auth.py  test_cache_feed.py  test_celery_app.py  test_celery_tasks.py  test_database.py  test_feed_cache.py  test_health.py  test_metrics.py  test_performance.py  test_profiles_feed.py  test_sanity.py  test_schema.py  test_serializers.py  test_settings_smoke.py  test_song_filters.py  test_songs.py  test_static_config.py  test_storage_avatar.py
backups/: .gitignore
docs/: ARCHITECTURE.md  JOURNAL.md  backups.md  cloud-migration.md  deployment.md  env-management.md  https-haproxy.md  monitoring.md  operations.md  performance.md  security.md  smoke-tests.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/docs/: frontend-audit.md
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  songs.ts  (+4 more)
monitoring/prometheus/: prometheus.yml
nginx/: app-ssl.conf.template  nginx.conf
nginx/disabled/: default.conf
scripts/: check-env.sh  deploy.sh  generate-secrets.sh  server-setup.sh  smoke-prod.sh  vps-issue-cert-standalone.sh  vps-prepare-https.sh
scripts/backup/: backup-db.sh  backup-media.sh  backup.sh  lib.sh  prune.sh  restore-db.sh  restore-media.sh  upload-remote.sh  upload-rsync.sh
scripts/cloud/: s3-smoke.sh
scripts/ops/: https-time-sync.sh  install-backups.sh
(+37 files in other folders)
