[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1,<5.2",
    "django-cors-headers>=4.4",
    "django-environ>=0.11",
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "ruff>=0.7",
]
