[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1,<5.2",
    "django-cors-headers>=4.4",
    "django-environ>=0.11",
    "django-filter>=24.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.27",
    "gunicorn>=26.0.0",
    "pillow>=11.0",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "ruff>=0.7",
]
