[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.32",
    "celery>=5.6.3",
    "django>=5.1,<5.2",
    "django-cors-headers>=4.4",
    "django-environ>=0.11",
    "django-filter>=24.0",
    "django-redis>=6.0.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.27",
    "gunicorn>=26.0.0",
    "mutagen>=1.47.0",
    "pillow>=11.0",
    "psycopg[binary]>=3.2",
    "redis>=8.0.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.9",
    "pyyaml>=6.0.3",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "*_test.py"]
addopts = "--reuse-db --cov --cov-fail-under=85"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "manage.py",
    "config/wsgi.py",
    "config/asgi.py",
    "config/settings/*",
    "*/__init__.py",
    "*/apps.py",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"
